Added github link

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 	</h2>
 </div>
 </div>
+<div id="github"><h4>View project files on
+<a href="https://github.com/blakeoconnell/wow-class-picker">GitHub</a>.</h4>
+</div>
 <script type="text/javascript" src="assets/js/classPicker.js"></script>
 </body>
 </html>
