--- a/index.html
+++ b/index.html
@@ -2,7 +2,28 @@
 <html>
 
 <head>
+
+	<!-- Primary Meta Tags -->
 	<title>WoW Class Picker</title>
+	<meta name="title" content="WoW Class Picker">
+	<meta name="description" content="Can't decide on a class? Use this tool to pick a class for you!">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://blakeoconnell.github.io/wow-class-picker/">
+	<meta property="og:title" content="WoW Class Picker">
+	<meta property="og:description" content="Can't decide on a class? Use this tool to pick a class for you!">
+	<meta property="og:image"
+		content="assets/images/wowpicker.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://blakeoconnell.github.io/wow-class-picker/">
+	<meta property="twitter:title" content="WoW Class Picker">
+	<meta property="twitter:description" content="Can't decide on a class? Use this tool to pick a class for you!">
+	<meta property="twitter:image"
+		content="assets/images/wowpicker.png">
+
 	<link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/classPicker.css">
