--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:title" content="WoW Class Picker">
 	<meta property="og:description" content="Can't decide on a class? Use this tool to pick a class for you!">
 	<meta property="og:image"
-		content="assets/images/wowpicker.png">
+		content="/assets/images/wowpicker.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
@@ -22,7 +22,7 @@
 	<meta property="twitter:title" content="WoW Class Picker">
 	<meta property="twitter:description" content="Can't decide on a class? Use this tool to pick a class for you!">
 	<meta property="twitter:image"
-		content="assets/images/wowpicker.png">
+		content="/assets/images/wowpicker.png">
 
 	<link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
